<resources>
    <string name="app_name">Color Surge</string>
    <string name="TitleText">Recolor any part of your pictures! Choose an option below to get started…</string>
    <string name="darkTheme">Dark theme</string>
    <string name="CameraOption">TAKE A PICTURE</string>
    <string name="FileOption">CHOOSE A PICTURE</string>
    <string name="Settings">SETTINGS</string>
    <string name="RecolorInstructions">Touch the color on the image that you want to recolor. Then choose a color from the \"To\" drop down list below and click \"Recolor\".</string>
    <string name="From">FROM:</string>
    <string name="To">TO:</string>
    <string name="Choose">Choose Color</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="picture">Picture</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="FromColor">From Color</string>
    <string name="ToColor">To Color</string>
    <string name="FromInstruction">Touch the color on the picture that you want to recolor</string>
    <string name="ToInstruction">Touch here to choose the new color</string>
    <string name="Hex">Choose color</string>
    <string name="AppLogo">AppLogo</string>
    <string name="EraserInstructions">Use the Eraser Tool to undo any unwanted color changes. This message will only show once.</string>
    <string name="ColorTip">For best results, account for shades when recoloring. For example, recolor dark shades of red with dark shades of blue using the sliders of the color picker</string>
    <string name="BrushSize">Eraser brush size</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
